--- a/Algorhythm/Algorhythm/Base.lproj/Main.storyboard
+++ b/Algorhythm/Algorhythm/Base.lproj/Main.storyboard
@@ -67,16 +67,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="XVK-GU-lG5">
+                            <imageView userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XVK-GU-lG5">
                                 <rect key="frame" x="16" y="64" width="288" height="261"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="XVK-GU-lG5" secondAttribute="height" multiplier="32:29" id="fzO-L4-I9X"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8yL-IQ-aHe">
+                                <rect key="frame" x="0.0" y="235" width="320" height="90"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title Goes Here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHf-G5-Y81">
+                                        <rect key="frame" x="20" y="10" width="119" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b5p-T1-BuM">
+                                        <rect key="frame" x="20" y="39" width="280" height="61"/>
+                                        <string key="text">This is a collection of my favorite songs to listen to when working out. It's got everything from fast cardio to power workout tunes. All the right fuel to get your engine going.</string>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="b5p-T1-BuM" secondAttribute="trailing" constant="20" id="0Q8-Mi-SeJ"/>
+                                    <constraint firstItem="SHf-G5-Y81" firstAttribute="leading" secondItem="8yL-IQ-aHe" secondAttribute="leading" constant="20" id="QTg-ZJ-gfL"/>
+                                    <constraint firstAttribute="width" secondItem="8yL-IQ-aHe" secondAttribute="height" multiplier="32:9" id="ZOQ-Pz-y37"/>
+                                    <constraint firstItem="b5p-T1-BuM" firstAttribute="top" secondItem="SHf-G5-Y81" secondAttribute="bottom" constant="8" id="bzM-hI-obt"/>
+                                    <constraint firstItem="b5p-T1-BuM" firstAttribute="leading" secondItem="8yL-IQ-aHe" secondAttribute="leading" constant="20" id="mA2-Ie-Yfp"/>
+                                    <constraint firstItem="SHf-G5-Y81" firstAttribute="top" secondItem="8yL-IQ-aHe" secondAttribute="top" constant="10" id="wnS-Kr-zQ7"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.1764705882" green="0.1843137255" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="0.35294117650000001" green="0.73333333329999995" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="8yL-IQ-aHe" secondAttribute="trailing" id="AiC-eS-9db"/>
+                            <constraint firstItem="8yL-IQ-aHe" firstAttribute="leading" secondItem="igj-t9-DcB" secondAttribute="leading" id="FA6-d3-w2q"/>
+                            <constraint firstItem="XVK-GU-lG5" firstAttribute="bottom" secondItem="8yL-IQ-aHe" secondAttribute="bottom" id="MXv-Tw-6eI"/>
                             <constraint firstAttribute="trailingMargin" secondItem="XVK-GU-lG5" secondAttribute="trailing" id="SqF-Mo-ff6"/>
                             <constraint firstItem="XVK-GU-lG5" firstAttribute="leading" secondItem="igj-t9-DcB" secondAttribute="leadingMargin" id="iNH-ua-Ash"/>
                             <constraint firstItem="XVK-GU-lG5" firstAttribute="top" secondItem="BZE-Go-hhm" secondAttribute="bottom" id="kN4-T7-3nu"/>
